resolve some broken CSS in production

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,10 @@
         @apply transition transform hover:scale-105 ease-in-out duration-300 filter hover:grayscale;
     }
 
+    img.logo {
+        @apply inline mr-2;
+    }
+
     a {
         /* TODO:  bring this back once I figure out how to skip underlining the nav type/logo */
         /* @apply transition hover:underline; */
